@@ -1,4 +1,5 @@
-07142013 -> jonnyboy -> added limit to requestID per run
+07142013 -> jonnyboy -> added additional monitor paths in tmux - request
+						added limit to requestID per run
 						added powerline segment for NNTP connections - ThePeePs
 						added lines to monitor to show NNTP connections - Mike1
 07132013 -> jonnyboy -> gave GrabNZBs its own thread count
